<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppTeatroV1</string>
    <string name="teatrooos">Teatro</string>
    <string name="pruebaconexion">Conectar a MySQL</string>
    <string name="butacas">BUTACAS</string>
    <string name="butacastitulo">Butacas</string>
    <string name="patio">Patio</string>
    <string name="palco">Palco</string>
    <string name="vip">VIP</string>
    <string name="boton_volver">Volver</string>
    <string name="registro">Registrarse</string>
    <string name="nombre_registro">Nombre</string>
    <string name="apellido_registro">Apellido</string>
    <string name="telefono_registro">Telefono</string>
    <string name="email_registro">Email</string>
    <string name="password_registro">Contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="login">Login</string>
    <string name="boton_acceder">Acceder</string>
    <string name="pantalla_cliente">Conciertos Disponibles</string>
    <string name="pantalla_admin">Pantalla Admin</string>
    <string name="boton_logout">Cerrar Sesión</string>
    <string name="cargando_conciertos">Cargando conciertos</string>
    <string name="sesiones_disponibles">Sesiones disponibles</string>
    <string name="ver_sesiones_disponibles">Ver sesiones disponibles</string>
    <string name="titulo_nuevo_concierto">NUEVO CONCIERTO</string>
    <string name="hint_nombre_concierto">Nombre del evento (Ej: El Lago de los Cisnes)</string>
    <string name="hint_artista_concierto">Artista o Compañía</string>
    <string name="hint_ciudad_concierto">Ciudad (Ej: Madrid)</string>
    <string name="btn_guardar_bd">GUARDAR EN BASE DE DATOS</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_anadir_concierto">Añadir Nuevo Concierto</string>
    <string name="titulo_admin">Pantalla Admin</string>

    <string name="titulo_cambiar_pass">Cambiar Contraseña</string>
    <string name="hint_pass_actual">Contraseña Actual</string>
    <string name="hint_pass_nueva">Nueva Contraseña</string>
    <string name="hint_pass_confirmar">Confirmar Nueva Contraseña</string>
    <string name="btn_actualizar">Actualizar Contraseña</string>
    <string name="error_pass_no_coinciden">Las contraseñas nuevas no coinciden</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="actualizar_contrase_a">Actualizar Contraseña</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar_compra">Confirmar compra</string>
    <string name="resumen_de_compra">Resumen de compra</string>
    <string name="confirmar_y_pagar">Confirmar y Pagar</string>
    <string name="total_de_compra">Total de Compra: 0 €</string>
    <string name="compra_realizada_correctamente">Compra realizada correctamente</string>
    <string name="descargar_entradas_pdf">Descargar entradas PDF</string>
    <string name="resumen_de_la_compra">Resumen de la compra</string>
    <string name="usuario">Usuario:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="concierto">Concierto:</string>
    <string name="fecha_y_hora">Fecha y hora:</string>
    <string name="butacas_pdf">Butacas:</string>
    <string name="total_pagado_pdf">Total pagado:</string>
    <string name="volver_a_conciertos">Volver a conciertos</string>
    <string name="codigo_recu">Introduce el código de 6 dígitos</string>
    <string name="gestionar_sesiones">GESTIONAR SESIONES</string>
    <string name="anadir_nueva_sesion">Añadir Nueva Sesión</string>
    <string name="hint_fecha">Fecha</string>
    <string name="hint_hora">Hora</string>
    <string name="msg_sesion_guardada">Sesión guardada</string>
    <string name="eliminar_titulo">Eliminar</string>
    <string name="error_campos_vacios">Completa todos los campos</string>
    <string name="btn_guardar">Guardar</string>
    <string name="opcion_si">Sí</string>
    <string name="opcion_no">No</string>
    <string name="eliminar_mensaje">¿Borrar esta sesión?</string>
    <string name="titulo_sesiones">Sesiones - %1$s</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="eliminar_concierto">Eliminar concierto</string>

</resources>