<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ===== FONDO ===== -->
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/fondo"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- OSCURO -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- CONTENIDO -->
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnConfirmarCompra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:paddingBottom="120dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/butacastitulo"
                android:textSize="42sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"/>

            <TextView
                android:id="@+id/textviewpatio"
                android:text="@string/patio"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <GridLayout
                android:id="@+id/gridPatio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="4"
                android:columnCount="4"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textviewpalco"
                android:text="@string/palco"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <GridLayout
                android:id="@+id/gridPalco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="2"
                android:columnCount="2"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textviewVip"
                android:text="@string/vip"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <GridLayout
                android:id="@+id/gridVip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="2"
                android:columnCount="2"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </ScrollView>

    <!-- BOTON CONFIRMAR COMPRA -->
    <Button
        android:id="@+id/btnConfirmarCompra"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/confirmar_compra"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/boton_oscuro"
        android:backgroundTint="@null"
        android:stateListAnimator="@null"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnVolver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- LINEA debajo -->
    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="#80FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirmarCompra"
        app:layout_constraintStart_toStartOf="@+id/btnConfirmarCompra"
        app:layout_constraintEnd_toEndOf="@+id/btnConfirmarCompra"/>



    <!-- BOTON VOLVER -->
    <Button
        android:id="@+id/btnVolver"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/boton_volver"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/boton_oscuro"
        android:backgroundTint="@null"
        android:stateListAnimator="@null"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- LINEA debajo -->
    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="#80FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/btnVolver"
        app:layout_constraintStart_toStartOf="@id/btnVolver"
        app:layout_constraintEnd_toEndOf="@id/btnVolver"/>

</androidx.constraintlayout.widget.ConstraintLayout>