<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/fondo"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/email_registro"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        android:background="#40FFFFFF"
        android:padding="12dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password_registro"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        android:background="#40FFFFFF"
        android:padding="12dp"
        android:inputType="textPassword"
        android:drawableEnd="@android:drawable/ic_menu_view"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_acceder"
        android:textColor="#FFFFFF"
        android:minHeight="48dp"
        android:background="@drawable/subrayado_boton"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="6dp"
        android:fontFamily="serif"
        android:paddingBottom="10dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_volver"
        android:textColor="#FFFFFF"
        android:minHeight="48dp"
        android:background="@drawable/subrayado_boton"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="10dp"
        android:fontFamily="serif"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvOlvidarPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Has olvidado tu contraseña?"
        android:textColor="#DDDDDD"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnVolver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>